# ThingFramework

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  pyproject.toml
.circleci/: config.yml
.distro/: thing-framework.spec
.distro/plans/: rpmlint.fmf
.distro/tests/: rpmlint.fmf  smoke.fmf
.github/: release.yaml
.github/workflows/: test.yaml
cmake/: CMakePresets-CI.json  CMakePresets-defaults.json  CMakePresets-utility.json  ThingFrameworkConfig.cmake.in
distro/: thing-framework.spec
doc/: CMakeLists.txt  Doxyfile  conf.py  index.md
doc/_static/: breathe.css
doc/api/: index.md  metadata.md  registrar.md  utility.md
include/: CMakeLists.txt  ThingFramework.ixx
include/ThingFramework/: CMakeLists.txt  Metadata.ixx.in
include/ThingFramework/Interfaces/: CMakeLists.txt  Concepts.ixx  ICloneable.ixx  IExposable.ixx  Interfaces.ixx
include/ThingFramework/Registrar/: CMakeLists.txt  Concepts.ixx  Exceptions.ixx  IRegistrar.ixx  Registrar.ixx  Standard.ixx  Traits.ixx
include/ThingFramework/Registrar/Registrars/: CMakeLists.txt  ObjectRegistrar.ixx  RefRegistrar.ixx  SharedRegistrar.ixx
include/ThingFramework/Utility/: CMakeLists.txt  Concepts.ixx  Exceptions.ixx  Standard.ixx  Utility.ixx
include/ThingFramework/Utility/DynamicLibrary/: CMakeLists.txt  DynamicLibrary.ixx
src/: CMakeLists.txt
src/Interfaces/: CMakeLists.txt  Concepts.cppm  IExposable.cpp
src/Registrar/: CMakeLists.txt  Concepts.cppm  Exceptions.cpp  IRegistrar.cpp  IRegistrar.cppm  IRegistrar_coro.cpp  IRegistrar_coro.cppm
src/Registrar/Registrars/: CMakeLists.txt  ObjectRegistrar.cppm  ObjectRegistrarRoot.cppm  ObjectRegistrarRoot.ixx  RefRegistrar.cppm  RefRegistrarRoot.cppm  RefRegistrarRoot.ixx  SharedRegistrar.cppm  SharedRegistrarRoot.cppm  SharedRegistrarRoot.ixx
src/Utility/: CMakeLists.txt  Concepts.cppm  Exceptions.cpp  Standard.cppm
src/Utility/DynamicLibrary/: CMakeLists.txt  DynamicLibrary.cpp
test/: CMakeLists.txt
test/Utility/: CMakeLists.txt  test_Concepts.cpp
